
	* sql/mysql/add_header_tables.mysql:
	Added a note about transactions. Closes bug #296.
	* sql/postgresql/migrate_from_1.x_to_2.0.pgsql:
	Added CASCADE after each DROP INDEX. Closes bug #167.
	* dbmail.conf, modules/authldap.c:
	Added LDAP_VERSION support, defaulting to version 3.
	Closes bug #288.
	* dbmail-message.c:
	Moved a g_new0 into an anon block only where it is needed.

2006-03-21  Paul J Stevens <paul@nfg.nl>

	* imapcommands.c:
	check for invalid characters in _ic_create and _ic_rename
	* sql/postgresql/add_auto_replies_fields.pgsql, 
	  sql/postgresql/add_usermap.psql:
	add missing statements in postgres sql files
	* test-scripts/testimap.py, check_dbmail_db.c, check_dbmail_dsn.c,
	check_dbmail_imapd.c:
	cleanups
	* ChangeLog, dbmail-imapsession.c, dbmailtypes.h, debug.c, misc.c:
	make INTERNALDATE response rfc compliant (closes: #300)
	* Makefile.am, check_dbmail_db.c:
	add testframe for db.c
	* debug.c, debug.h:
	make trace level=0 really silent except for fatal errors
	* modules/dbmysql.c, db.c:
	fix db_query for mysql so it doesn't ignore some errors

2006-03-20  Paul J Stevens <paul@nfg.nl>

	* ChangeLog, debian/changelog, tags:
	remove tags file
	* dbmail-imapsession.c, dbmail-imapsession.h, imap4.c, imapcommands.c, 
	  test-scripts/testimap.py:
	merge and finish Matthews patch to deal with too-long imapcommands
	* db.c, misc.c, test-scripts/testimap.py:
	merge Matthews patch for allowing single-quotes in mailbox names

2006-03-18  Paul J Stevens <paul@nfg.nl>

	* timsieve.c:
	excessive if/then depth cleanup
	* main.c:
	use delivered-to header for default delivery
	* main.c:
	restore -u delivery for dbmail-smtp

2006-03-17  Paul J Stevens <paul@nfg.nl>

	* ChangeLog, debian/dbmail.logrotate:
	added debian/dbmail.logrotate
	* debian/dbmail.postinst, debian/rules:
	call ldconfig and install logrotate file
	* timsieve.c:
	replace fprintf calls with ci_write wrapper
	* debug.c:
	fix race condition in accessing va_list in trace calls